prover-ray/zkcdriver/testdata/synced/invalid/switch_duplicate_label_04.zkc
//error:19:10-15:duplicate label in switch statement

// ================
// duplicate label
// ================

type exmp = u8

const CASE_A     :exmp = 1
const CASE_B     :exmp = 2
const CASE_MATCH :exmp = 13

fn main() {

  var discr :exmp = CASE_MATCH

  switch discr {
    case CASE_A: { }
    case CASE_A, CASE_B: { }
  }
}
